style: fix sender overflow on Firefox

--- a/botfront/imports/ui/layouts/project.import.less
+++ b/botfront/imports/ui/layouts/project.import.less
@@ -214,10 +214,6 @@
         height: 100%;
     }
 
-    .widget-embedded {
-        position: unset;
-    }
-
     .ui.active.visible.item.dropdown .menu.transition.visible {
         max-width: 300px;
         .selected.item {
